# sandwine

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: codespell.yml  pre-commit-detect-outdated.yml  pre-commit.yml  run-tests.yml
sandwine/: __main__.py  _main.py  _metadata.py  _pty.py  _x11.py
